--- a/Deploy-containers-pipeline/Jenkinsfile
+++ b/Deploy-containers-pipeline/Jenkinsfile
@@ -31,40 +31,40 @@ pipeline {
 
 		stage('Set current kubectl context') {
 			steps {
-				withAWS(region:'us-east-1', credentials:'uda_aws') {
-					sh '''
-						kubectl config use-context arn:aws:eks:us-east-1:142977788479:cluster/uda_capstonecluster
-					'''
+	//			withAWS(region:'us-east-1', credentials:'uda_aws') {
+	//				sh '''
+	//					kubectl config use-context arn:aws:eks:us-east-1:142977788479:cluster/udacapstonecluster
+	//				'''
 				}
 			}
 		}
 
 		stage('Deploy blue container') {
 			steps {
-				withAWS(region:'us-east-1', credentials:'uda_aws') {
-					sh '''
-						kubectl apply -f ./blue-controller.json
-					'''
+		//		withAWS(region:'us-east-1', credentials:'uda_aws') {
+		//			sh '''
+		//				kubectl apply -f ./blue-controller.json
+		//			'''
 				}
 			}
 		}
 
 		stage('Deploy green container') {
 			steps {
-				withAWS(region:'us-east-1', credentials:'uda_aws') {
-					sh '''
-						kubectl apply -f ./green-controller.json
-					'''
+		//		withAWS(region:'us-east-1', credentials:'uda_aws') {
+		//			sh '''
+		//				kubectl apply -f ./green-controller.json
+		//			'''
 				}
 			}
 		}
 
 		stage('Create the service in the cluster, redirect to blue') {
 			steps {
-				withAWS(region:'us-east-1', credentials:'uda_aws') {
-					sh '''
-						kubectl apply -f ./blue-service.json
-					'''
+		//		withAWS(region:'us-east-1', credentials:'uda_aws') {
+		//			sh '''
+		//				kubectl apply -f ./blue-service.json
+		//			'''
 				}
 			}
 		}
@@ -77,10 +77,10 @@ pipeline {
 
 		stage('Create the service in the cluster, redirect to green') {
 			steps {
-				withAWS(region:'us-east-1', credentials:'uda_aws') {
-					sh '''
-						kubectl apply -f ./green-service.json
-					'''
+			//	withAWS(region:'us-east-1', credentials:'uda_aws') {
+			//		sh '''
+			//			kubectl apply -f ./green-service.json
+			//		'''
 				}
 			}
 		}
